<resources>
    <string name="app_name">AtividadeAD_etec</string>
    <string name="slogan">SOLOGAN HERE</string>
    <string name="lorem_ipsum_dolor_sit_amet_sed_doloremque_consectetur_a_fuga_dolores_in_voluptatem_unde_qui_atque_aperiam_non_ipsam_ratione_aut_maiores_animi_33_magnam">Lorem ipsum dolor sit amet, consectetur a fuga dolores in voluptatem unde qui atque aperiam non ipsam ratione aut maiores animi 33 magnam.</string>
    <string name="sing_in">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="sing_up">Sign up</string>
    <string name="user">User Name</string>
    <string name="password">Password</string>
    <string name="remenber_password">Remenber Password</string>
    <string name="sing_with_social_media">Sing with Social Media</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="allow_term_conditions"><![CDATA[Allow term & Conditions]]></string>
    <string name="already_have_an_account">Already have an account?</string>

</resources>