<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg_foreground"
    android:orientation="vertical"
    tools:context=".Entrar">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_logo" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/borda"
        android:drawableRight="@drawable/ic_user"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:maxLength="100"
        android:padding="18dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/borda"
        android:drawableRight="@drawable/ic_key"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="50"
        android:padding="18dp"
        android:textColorHint="@color/white" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/remenber_password"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TableLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:layout_width="135dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="50dp"
                android:angle="90"
                android:backgroundTint="#f15d24"
                android:text="@string/sing_in"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="30dp" />

            <TextView
                android:id="@+id/txtforgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textColor="@color/white"
            android:layout_marginTop="2dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="155dp"
            android:drawableRight="@drawable/ic_baseline_chevron_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="153dp"
            android:drawableRight="@drawable/ic_radio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="67dp"
            android:layout_marginTop="25dp"
            android:text="@string/sing_up"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>


